--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
   /* background color url repeat position/size */
   
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
+
 }
 
 body * {
@@ -173,3 +175,15 @@ ul li a {
     font-size: 14px;    
   }
 
+/* media queries */
+
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
