--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   --social-link-hover: rgba(255, 255, 255, 0.20);
   --switch-bg-url: url(assets/moon-star.svg);
 
+
 }
 
 .light {
@@ -23,6 +24,7 @@
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --social-link-hover: rgba(0, 0, 0, 0.10);
   --switch-bg-url: url(assets/sun.svg);
+  
 
 }
 
@@ -93,11 +95,17 @@ para alinhar imagem que sempre é inline. Podendo alinhar left, center, right.. 
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.4s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+
+}
+
+#switch button:hover {
+  outline: 8px solid var(--social-link-hover);
 }
 
 
@@ -185,5 +193,24 @@ ul li a {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0%;
   }
 }
